# NeuroGenome

./: .gitignore  README.md  neuroGenome.py  pyproject.toml  requirements.txt  setup.py
examples/: schema_settings.py  xor.py
examples/2D_Labyrinth_NumPy/: LICENSE  README.md  main.py  nn.py
examples/2D_Labyrinth_PyTorch/: README.md  nn.py  player.py  ray_casting.py  requirements.txt  settings.py
examples/XOR/: README.md
neurogenome/: __init__.py  builders.py  evolution.py  file_management.py  genome.py  macromutations.py  neuroGenome.py
tests/: test_neurogenome.py
