[tool.poetry]
name = "neurogenome"
version = "0.1.4"
description = "A universal API for create artificial neural networks with a genetic code."
authors = ["Aiyyskhan Alekseev <aiyykhan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Aiyyskhan/NeuroGenome"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"
h5py = "^2.10"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
